--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     </head>
     <body>
         <script>
-            console.log('Hello World');
+            var nome = "Diego";
+            var idade = 23;
+            var peso = 80.5;
+            var humano = true;
+
+            var alunos = ['Diego', 'Gabriel', 'Lucas']
+
+            var aluno = {
+                nome: alunos[2],
+                idade: 23;
+                peso: 80.5,
+                humano: true
+            };
+
+            console.log(alunos[1]);
+            console.log(aluno.peso);
         </script>
     </body>
 </html>
