--- a/index.html
+++ b/index.html
@@ -4,22 +4,13 @@
     </head>
     <body>
         <script>
-            var nome = "Diego";
-            var idade = 23;
-            var peso = 80.5;
-            var humano = true;
+            var x = "10", y = 5;
 
-            var alunos = ['Diego', 'Gabriel', 'Lucas']
+            x += y;
 
-            var aluno = {
-                nome: alunos[2],
-                idade: 23;
-                peso: 80.5,
-                humano: true
-            };
+            //x = x + 3;
 
-            console.log(alunos[1]);
-            console.log(aluno.peso);
+            console.log(resultado);
         </script>
     </body>
 </html>
