--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     </head>
     <body>
         <script>
-            var x = "10", y = 5;
+            function soma(numero1, numero2){
+                var resultado = numero1 + numero2;
 
-            x += y;
+                return resultado;
+            }
 
-            //x = x + 3;
-
+            var resultado = soma(1, 2);
             console.log(resultado);
         </script>
     </body>
