--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     </head>
     <body>
         <script>
-            function retornaSexo(sexo){
-                switch (sexo) {
-                    case 'M':
-                        return 'Masculino';    
-                    case 'F':
-                        return 'Feminino';
-                    default:
-                        return 'Outro';
-                }
-            }
+            // AND, OR, NOT 
 
-            var resultado = retornaSexo('M');
-            console.log(resultado);
+            sexo = 'F';
+
+            var masculino = sexo === 'M'
+            
+            console.log(masculino);
         </script>
     </body>
 </html>
