--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     </head>
     <body>
         <script>
-            // AND, OR, NOT 
+            var sexo = 'M';
 
-            sexo = 'F';
-
-            var masculino = sexo === 'M'
-            
-            console.log(masculino);
+            var retorno = (sexo = 'M') ? 'Masculino' : 'Feminino';
+            console.log(retorno);
         </script>
     </body>
 </html>
