--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     </head>
     <body>
         <script>
-            var sexo = 'M';
+            // for, while
 
-            var retorno = (sexo = 'M') ? 'Masculino' : 'Feminino';
-            console.log(retorno);
+            //for(var i = 0; i <= 100; i++){
+            //    console.log(i);
+           // }
+
+            var j = 219345872;
+            while (j < 50) {
+                console.log(j);
+
+                j /= 5;
+            }
+
         </script>
     </body>
 </html>
