--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
     </head>
     <body>
         <script>
-            // for, while
-
-            //for(var i = 0; i <= 100; i++){
-            //    console.log(i);
-           // }
-
-            var j = 219345872;
-            while (j < 50) {
-                console.log(j);
-
-                j /= 5;
+            function exibeAlgo() {
+                console.log('Hello World');
             }
 
+            setTimeout(exibeAlgo, 5000);
         </script>
     </body>
 </html>
