--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     </head>
     <body>
         <div id="app">
-            <input type="text" name="nome" />
-            <button class="botao">Adicionar</button>
+            <input id="nome" />
         </div>
         <script>
-            var inputElement = document.querySelector('input[name=nome]');
-            var btnElement = document.querySelector('button.botao');
+            var linkElement = document.createElement('a');
+            linkElement.setAttribute('href', 'https://rocketseat.com.br');
+            linkElement.setAttribute('title', 'Site da Rocketseat');
 
-            btnElement.onclick = function () {
-                var text = btnElement.value;
+            var textElement = document.createTextNode('Acessar o site da Rocketseat');
+            linkElement.appendChild(textElement);
 
-                alert(text);
-            }
+            var containerElement = document.querySelector('#app');
+            containerElement.appendChild(linkElement);
+
+            var inputElement = document.querySelector('#nome');
+            containerElement.removeChild(inputElement);
+
 
         </script>
     </body>
