--- a/index.html
+++ b/index.html
@@ -4,23 +4,14 @@
     </head>
     <body>
         <div id="app">
-            <input id="nome" />
+            <div class="box"></div>
         </div>
         <script>
-            var linkElement = document.createElement('a');
-            linkElement.setAttribute('href', 'https://rocketseat.com.br');
-            linkElement.setAttribute('title', 'Site da Rocketseat');
+            var boxElement = document.querySelector('.box');
 
-            var textElement = document.createTextNode('Acessar o site da Rocketseat');
-            linkElement.appendChild(textElement);
-
-            var containerElement = document.querySelector('#app');
-            containerElement.appendChild(linkElement);
-
-            var inputElement = document.querySelector('#nome');
-            containerElement.removeChild(inputElement);
-
-
+            boxElement.style.width = 100;
+            boxElement.style.height = 100;
+            boxElement.style.backgroundColor = '#f00';
         </script>
     </body>
 </html>
