--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     </head>
     <body>
         <div id="app">
-            <div class="box"></div>
+            <ul>
+                <li>
+                    Fazer café
+                    <a href="#">Excluir</a>
+                </li>
+                <li>
+                    Estudar Javascript
+                    <a href="#">Excluir</a>
+                </li>
+                <li>
+                    Acessar comunidade da Rocketseat
+                    <a href="#">Excluir</a>
+                </li>
+            </ul>
+            <input type="text" placeholder="Digite um todo">
+            <button>Adicionar</button>
         </div>
-        <script>
-            var boxElement = document.querySelector('.box');
-
-            boxElement.style.width = 100;
-            boxElement.style.height = 100;
-            boxElement.style.backgroundColor = '#f00';
-        </script>
+        <script src="todos.js"></script>
     </body>
 </html>
