--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <div id="app">
         </div>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
